@@ -1,133 +1,145 @@
 #!/usr/bin/env python
 # Shine.Lustre.Disk test suite
 # Written by A. Degremont 2009-08-03
-# $Id$
 
 
 """Unit test for Shine.Lustre.Disk"""
 
-import sys
-import os
 import unittest
-import tempfile
 from subprocess import Popen, PIPE, STDOUT
-
-sys.path.insert(0, '../lib')
 
 import Utils
 from Shine.Lustre.Disk import Disk, DiskDeviceError
 
 class DiskLoopbackTest(unittest.TestCase):
 
-    def makeFileDevice(self, size):
-        # Get a temporary name for a file
-        fd, filename = tempfile.mkstemp(prefix="shine-nonreg-",suffix=".dev")
-        os.lseek(fd, size - 1, 0)
-        os.write(fd, 'A')
-        os.close(fd)
-        return filename
-
     def format(self, *opts):
         cmd = []
-        cmd += ["/usr/sbin/mkfs.lustre","--device-size", str(self.size / 1024)]
+        cmd += ["/usr/sbin/mkfs.lustre", "--device-size", str(self.size / 1024)]
         cmd += opts
         cmd.append(self.dev)
-        p = Popen(cmd, stdout=PIPE, stderr=STDOUT)
-        p.wait()
-        self.assertEqual(p.returncode, 0)
+        process = Popen(cmd, stdout=PIPE, stderr=STDOUT)
+        process.wait()
+        self.assertEqual(process.returncode, 0)
 
     def setUp(self):
         self.size = 450 * 1024 * 1024
-        self.dev = self.makeFileDevice(self.size)
-
-    def tearDown(self):
-        os.unlink(self.dev)
+        self.diskfile = Utils.make_disk(450)
+        self.dev = self.diskfile.name
+        self.disk = Disk(dev=self.dev)
 
     def testLoopbackDevCheck(self):
         """test device check with a loopback device"""
-        d = Disk(dev=self.dev)
-        d._device_check()
-        self.assertEqual(d.dev_isblk, False)
-        self.assertEqual(d.dev_size, self.size)
+        self.disk._device_check()
+        self.assertEqual(self.disk.dev_isblk, False)
+        self.assertEqual(self.disk.dev_size, self.size)
 
+    @Utils.rootonly
     def testMountDataFlags(self):
         """test mountdata flag check when freshly formatted"""
 
-        self.format("--fsname=nonreg","--mgs")
+        self.format("--fsname=nonreg", "--ost", "--mgsnode=127.0.0.1@lo")
 
-        d = Disk(dev=self.dev)
-        d._disk_check()
+        self.disk._mountdata_check()
 
         # first_time TRUE
-        self.assertTrue(d.has_first_time_flag())
+        self.assertTrue(self.disk.has_first_time_flag())
         # need_index TRUE
-        self.assertTrue(d.has_need_index_flag())
+        self.assertTrue(self.disk.has_need_index_flag())
         # update TRUE
-        self.assertTrue(d.has_update_flag())
+        self.assertTrue(self.disk.has_update_flag())
         # rewrite_ldd FALSE
-        self.assertFalse(d.has_rewrite_ldd_flag())
+        self.assertFalse(self.disk.has_rewrite_ldd_flag())
         # writeconf FALSE
-        self.assertFalse(d.has_writeconf_flag())
+        self.assertFalse(self.disk.has_writeconf_flag())
         # upgrade14 FALSE
-        self.assertFalse(d.has_upgrade14_flag())
+        self.assertFalse(self.disk.has_upgrade14_flag())
         # param FALSE
-        self.assertFalse(d.has_param_flag())
+        self.assertFalse(self.disk.has_param_flag())
 
-        self.assertEqual(d.flags(), ['need_index', 'first_time', 'update'])
+        self.assertEqual(self.disk.flags(),
+                         ['need_index', 'first_time', 'update'])
 
-    def testMountDataLabel(self):
+    @Utils.rootonly
+    def test_mountdata_label_mgs(self):
         """test mountdata check with fsname and MGS as label"""
 
-        self.format("--fsname=nonreg","--mgs","--param","sys.timeout=40")
+        self.format("--fsname=nonreg", "--mgs", "--param", "sys.timeout=40")
 
-        d = Disk(dev=self.dev)
-        d._disk_check(fsname_check="nonreg", label_check="MGS")
+        self.disk._mountdata_check(label_check="MGS")
+
+        # update TRUE
+        self.assertTrue(self.disk.has_update_flag())
+        # rewrite_ldd FALSE
+        self.assertFalse(self.disk.has_rewrite_ldd_flag())
+        # writeconf FALSE
+        self.assertFalse(self.disk.has_writeconf_flag())
+        # upgrade14 FALSE
+        self.assertFalse(self.disk.has_upgrade14_flag())
+        # param FALSE
+        self.assertFalse(self.disk.has_param_flag())
+
+        # Starting from Lustre 2.4, 'need_index' and 'first_time' flags are no
+        # more set
+        flags = self.disk.flags()
+        if 'need_index' in flags:
+            flags.remove('need_index')
+        if 'first_time' in flags:
+            flags.remove('first_time')
+        self.assertEqual(flags, ['update'])
+
+    @Utils.rootonly
+    def test_mountdata_label_ost(self):
+        """test mountdata check with fsname and label for an OST"""
+
+        self.format("--fsname=nonreg", "--ost", "--mgsnode=127.0.0.1@lo",
+                    "--param", "sys.timeout=40")
+
+        self.disk._mountdata_check(label_check="nonreg-OSTffff")
 
         # first_time TRUE
-        self.assertTrue(d.has_first_time_flag())
+        self.assertTrue(self.disk.has_first_time_flag())
         # need_index TRUE
-        self.assertTrue(d.has_need_index_flag())
+        self.assertTrue(self.disk.has_need_index_flag())
         # update TRUE
-        self.assertTrue(d.has_update_flag())
+        self.assertTrue(self.disk.has_update_flag())
         # rewrite_ldd FALSE
-        self.assertFalse(d.has_rewrite_ldd_flag())
+        self.assertFalse(self.disk.has_rewrite_ldd_flag())
         # writeconf FALSE
-        self.assertFalse(d.has_writeconf_flag())
+        self.assertFalse(self.disk.has_writeconf_flag())
         # upgrade14 FALSE
-        self.assertFalse(d.has_upgrade14_flag())
+        self.assertFalse(self.disk.has_upgrade14_flag())
         # param FALSE
-        self.assertFalse(d.has_param_flag())
+        self.assertFalse(self.disk.has_param_flag())
 
-        self.assertEqual(d.flags(), ['need_index', 'first_time', 'update'])
+        self.assertEqual(self.disk.flags(),
+                         ['need_index', 'first_time', 'update'])
 
+    @Utils.rootonly
     def testMountDataBadLabel(self):
         """test mountdata check with wrong fsname and label"""
-
         self.format("--fsname=nonreg","--mgs")
-
-        d = Disk(dev=self.dev)
-        self.assertRaises(DiskDeviceError, d._disk_check,fsname_check="something_else", label_check="MGS")
-        self.assertRaises(DiskDeviceError, d._disk_check,fsname_check="nonreg", label_check="MDT")
-        self.assertRaises(DiskDeviceError, d._disk_check,fsname_check="bad_fsname", label_check="bad_label")
+        self.assertRaises(DiskDeviceError, self.disk._mountdata_check,
+                          label_check="MDT")
+        self.assertRaises(DiskDeviceError, self.disk._mountdata_check,
+                          label_check="bad_label")
 
     def testMountDataNoFormat(self):
         """test mountdata on a not formatted device"""
-
-        d = Disk(dev=self.dev)
-        self.assertRaises(DiskDeviceError, d._disk_check)
+        self.assertRaises(DiskDeviceError, self.disk._mountdata_check)
 
 
 class DiskOtherTest(unittest.TestCase):
 
     def testErrorDevCheck(self):
         """test device check with a wrong device"""
-        d = Disk(dev='wrong path')
-        self.assertRaises(DiskDeviceError, d._device_check)
+        disk = Disk(dev='wrong path')
+        self.assertRaises(DiskDeviceError, disk._device_check)
 
     def testBadDevCheck(self):
         """test device check with a bad file"""
-        d = Disk(dev='/dev/tty0')
-        self.assertRaises(DiskDeviceError, d._device_check)
+        disk = Disk(dev='/dev/tty0')
+        self.assertRaises(DiskDeviceError, disk._device_check)
 
     ### XXX: This does not check the device size
     def testBlockDevCheck(self):
@@ -139,27 +151,16 @@ class DiskOtherTest(unittest.TestCase):
 
     def testUpdate(self):
         """test update a Disk instance with another one"""
+        disk1 = Disk(dev='a_dev')
+        disk1.dev_size = 1234
+        disk2 = Disk(dev='b_dev')
+        disk2.dev_size = 5678
+        disk1.update(disk2)
 
-        d1 = Disk(dev='a_dev')
-        d1.dev_size = 1234
-        d1.ldd_fsname = "fsname"
-        d2 = Disk(dev='b_dev')
-        d2.dev_size = 5678
-        d2.ldd_fsname = "other"
-        d1.update(d2)
-
-        self.assertEqual(d1.dev_size, d2.dev_size)
-        self.assertEqual(d1.ldd_fsname, d2.ldd_fsname)
+        self.assertEqual(disk1.dev_size, disk2.dev_size)
 
     def testException(self):
         """test Disk exception classes"""
-        d = Disk(dev="foo")
-
-        e = DiskDeviceError(disk=d, message="Something")
-        self.assertEqual(str(e), "Something")
-
-
-if __name__ == '__main__':
-    suite = unittest.TestLoader().loadTestsFromTestCase(DiskLoopbackTest)
-    suite.addTests(unittest.TestLoader().loadTestsFromTestCase(DiskOtherTest))
-    unittest.TextTestRunner(verbosity=2).run(suite)
+        disk = Disk(dev="foo")
+        exp = DiskDeviceError(disk=disk, message="Something")
+        self.assertEqual(str(exp), "Something")
